# acorn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/acorn-api/: Cargo.toml
crates/acorn-api/src/: events.rs  fleet.rs  lib.rs  mqtt.rs  ui.html  ui.rs
crates/acorn-client/: Cargo.toml
crates/acorn-client/src/: lib.rs
crates/acorn-cognitive/: Cargo.toml
crates/acorn-cognitive/src/: lib.rs
crates/acorn-mcp/: Cargo.toml
crates/acorn-mcp/src/: lib.rs
crates/acorn-proto/: Cargo.toml
crates/acorn-proto/src/: api.rs  error.rs  event.rs  lib.rs  rvf.rs  udp.rs
crates/acorn-sensors/: Cargo.toml
crates/acorn-sensors/src/: lib.rs
crates/acorn-store/: Cargo.toml
crates/acorn-store/src/: lib.rs
crates/acorn-witness/: Cargo.toml
crates/acorn-witness/src/: lib.rs
crates/acornd/: Cargo.toml
crates/acornd/src/: ingest.rs  main.rs  sensor_task.rs
packaging/: acornd.env  acornd.service
packaging/debian/: postinst  postrm  prerm
