[workspace]
resolver = "2"
members = [
    "crates/acorn-proto",
    "crates/acorn-client",
    "crates/acorn-store",
    "crates/acorn-witness",
    "crates/acorn-sensors",
    "crates/acorn-cognitive",
    "crates/acorn-api",
    "crates/acorn-mcp",
    "crates/acornd",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Glenn West"]

[workspace.dependencies]
# Internal crates
acorn-proto     = { path = "crates/acorn-proto" }
acorn-store     = { path = "crates/acorn-store" }
acorn-witness   = { path = "crates/acorn-witness" }
acorn-sensors   = { path = "crates/acorn-sensors" }
acorn-cognitive = { path = "crates/acorn-cognitive" }
acorn-api       = { path = "crates/acorn-api" }
acorn-mcp       = { path = "crates/acorn-mcp" }
acorn-client    = { path = "crates/acorn-client" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime / HTTP
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum         = { version = "0.7", features = ["ws"] }
tower-http   = { version = "0.6", features = ["trace", "cors"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto / hashing
sha2          = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand          = "0.8"
hex           = "0.4"

# Errors / logging / utility
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot        = "0.12"
clap               = { version = "4", features = ["derive", "env"] }
bytes              = "1"

# Graph algorithms (P3 cognitive)
petgraph = "0.6"

