[package]
name = "acorn-client"
description = "Async client for the Seed HTTP/MCP/push API. Z Man imports THIS (+ acorn-proto)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acorn-proto = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
acorn-store   = { workspace = true }
acorn-witness = { workspace = true }
acorn-api     = { workspace = true }
tokio         = { workspace = true }
axum          = { workspace = true }
