[package]
name = "acorn-cognitive"
description = "Cognitive container: Stoer-Wagner min-cut fragility + temporal coherence."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acorn-proto = { workspace = true }
acorn-store = { workspace = true }
serde       = { workspace = true }
parking_lot = { workspace = true }
