[package]
name = "acorn-mcp"
description = "MCP proxy: JSON-RPC 2.0 dispatcher + tool registry over the acorn runtime."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acorn-proto     = { workspace = true }
acorn-store     = { workspace = true }
acorn-witness   = { workspace = true }
acorn-cognitive = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
hex        = { workspace = true }
