[package]
name = "acorn-witness"
description = "SHA-256 hash-linked witness chain + Ed25519 device custody."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acorn-proto    = { workspace = true }
sha2           = { workspace = true }
ed25519-dalek  = { workspace = true }
rand           = { workspace = true }
hex            = { workspace = true }
thiserror      = { workspace = true }
parking_lot    = { workspace = true }
