[package]
name = "acornd"
description = "The wire-compatible Cognitum Seed daemon — ties the workspace together."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Forward to the acorn-sensors feature that pulls in the rppal/ads1x1x/bme280
# drivers. Build with `cargo build -p acornd --features pi-hw` on the Pi.
pi-hw = ["acorn-sensors/pi-hw"]

[dependencies]
acorn-proto   = { workspace = true }
acorn-store   = { workspace = true }
acorn-witness = { workspace = true }
acorn-sensors = { workspace = true }
acorn-api     = { workspace = true }

tokio              = { workspace = true }
axum               = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
sha2               = { workspace = true }
